2010-09-03  Jan Hubicka  <jh@suse.cz>

	* lto-cgraph.c (compute_ltrans_boundary): Use const_value_known.

2010-09-03  Naveen H.S  <naveen.S@kpitcummins.com>

	* config/v850/v850.c (v850_function_value_regno_p): Make static.
	Adjust comments. Declare.
	(TARGET_FUNCTION_VALUE_REGNO_P): Define.
	* config/v850/v850.h (FUNCTION_VALUE_REGNO_P): Delete.

2010-09-17  Richard Guenther  <rguenther@suse.de>

	* common.opt (combine): Remove.
	* gcc.c (default_compilers): Remove specs testing combine.
	The C compilers no longer can combine.
	(option_map): Remove -combine.
	(display_help): Remove -combine.
	(driver_handle_option): Remove OPT_combine handling.
	(compile_input_file_p): Remove.
	(do_spec): Remove code concerning combine.
	(main): Likewise.
	* doc/invoke.texi: Remove traces of -combine.
	* lto-wrapper.c (run_gcc): Do not pass -combine to the compiler
	driver.

2010-09-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/45678
	* builtins.c (fold_builtin_memory_op): Always properly adjust
	alignment of memory accesses.

2010-09-16  Jan Hubicka  <jh@suse.cz>

	* lto-cgraph.c (input_overwrite_node): Do not set DECL_EXTERNAL when
	processing clone.

2010-09-16  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386-protos.h (ix86_split_idivmod): New prototype.

	* config/i386/i386.c (predict_jump): Add prototype.
	(flag_opts): Add -m8bit-idiv.
	(ix86_split_idivmod): New.

	* config/i386/i386.md (UNSPEC_DIV_ALREADY_SPLIT): New.
	Add 2 splitters for SI/DI mode divide.
	(divmod<mode>4_1): New pattern.
	(udivmod<mode>4_1): Likewise.
	(testdi_ccno_1): Likewise.

	* config/i386/i386.opt (m8bit-idiv): New.

	* doc/invoke.texi: Document -m8bit-idiv.

2010-09-16  Reza Yazdani  <reza.yazdani@amd.com>

	PR bootstrap/45680
	* config/i386/i386.c (min_insn_size): Moved out of the
	ASM_OUTPUT_MAX_SKIP_PAD ifdef.

2010-09-16  Jan Hubicka  <jh@suse.cz>

	* lto-cgraph.c (lto_output_node): Fix handling of clones.
	* ipa.c (cgraph_remove_unreachabloe_nodes): Fix handling of